--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <section id="section-nieuws" class="section active">
         <h2>Nieuws</h2>
         <div class="card-list">
-          <!-- Voorbeeld nieuwsblok 1 -->
+          <!-- Nieuwsblok 1 -->
           <article class="card">
             <div class="card-text">
               <h3>Start nieuwsbrief FCBREO</h3>
@@ -62,18 +62,17 @@
             </div>
           </article>
 
-          <!-- Voorbeeld nieuwsblok 2 -->
+          <!-- Nieuwsblok 2: Google Docs - Nieuwsbrief FCBREO -->
           <article class="card">
             <div class="card-text">
-              <h3>Regionale bijeenkomst FCBREO</h3>
-              <p class="card-meta">Datum: 15 februari 2026</p>
-              <p>
-                Tijdens de regionale bijeenkomst brengen we de stand van zaken van de projecten in beeld en
-                bespreken we de voortgang binnen de vijf werkgroepen.
-              </p>
-            </div>
-            <div class="card-image-wrapper">
-              <img src="https://via.placeholder.com/320x200?text=Bijeenkomst" alt="Bijeenkomst">
+              <h3>Nieuwsbrief FCBREO</h3>
+              <p class="card-meta">Automatisch bijgewerkt vanuit Google Docs</p>
+              <iframe
+                class="doc-frame"
+                src="https://docs.google.com/document/d/1wz1gLEAbhYFRSKVfjdiu4d_yrpN9LZShDJ59A3EtqE8/preview"
+                loading="lazy"
+                allowfullscreen
+              ></iframe>
             </div>
           </article>
 
@@ -106,6 +105,20 @@
             </div>
           </article>
 
+          <!-- Nieuws Kansrijk opgroeien (Google Docs) -->
+          <article class="card">
+            <div class="card-text">
+              <h3>Nieuws Kansrijk opgroeien</h3>
+              <p class="card-meta">Automatisch bijgewerkt vanuit Google Docs</p>
+              <iframe
+                class="doc-frame"
+                src="https://docs.google.com/document/d/14Wgv9ycUv7OTz_lC2a78alzNRp9vaSWzUBI7vCF1J3U/preview"
+                loading="lazy"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </article>
+
           <!-- Mentale gezondheid -->
           <article class="card">
             <div class="card-text">
@@ -118,6 +131,20 @@
             </div>
             <div class="card-image-wrapper">
               <img src="https://via.placeholder.com/320x200?text=Mentale+gezondheid" alt="Mentale gezondheid">
+            </div>
+          </article>
+
+          <!-- Nieuws Mentale gezondheid (Google Docs) -->
+          <article class="card">
+            <div class="card-text">
+              <h3>Nieuws Mentale gezondheid</h3>
+              <p class="card-meta">Automatisch bijgewerkt vanuit Google Docs</p>
+              <iframe
+                class="doc-frame"
+                src="https://docs.google.com/document/d/16BH0KmnyHZFGUQJxCWG2oBkCvh73St4U89fnOf3dNSE/preview"
+                loading="lazy"
+                allowfullscreen
+              ></iframe>
             </div>
           </article>
 
@@ -136,6 +163,20 @@
             </div>
           </article>
 
+          <!-- Nieuws Leefstijl / leefomgeving en kansengelijkheid (Google Docs) -->
+          <article class="card">
+            <div class="card-text">
+              <h3>Nieuws Leefstijl / leefomgeving en kansengelijkheid</h3>
+              <p class="card-meta">Automatisch bijgewerkt vanuit Google Docs</p>
+              <iframe
+                class="doc-frame"
+                src="https://docs.google.com/document/d/1mzWXqABHdm1YuTJEJAlT6qFVXm3qca1EbQaEMRxsN-g/preview"
+                loading="lazy"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </article>
+
           <!-- Kwetsbare ouderen -->
           <article class="card">
             <div class="card-text">
@@ -151,6 +192,20 @@
             </div>
           </article>
 
+          <!-- Nieuws Kwetsbare ouderen (Google Docs) -->
+          <article class="card">
+            <div class="card-text">
+              <h3>Nieuws Kwetsbare ouderen</h3>
+              <p class="card-meta">Automatisch bijgewerkt vanuit Google Docs</p>
+              <iframe
+                class="doc-frame"
+                src="https://docs.google.com/document/d/11I-HAW4anGhJvKfob0ZK7tvogH0R0hq0ooLWJHBDxyA/preview"
+                loading="lazy"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </article>
+
           <!-- Subsidies -->
           <article class="card">
             <div class="card-text">
@@ -163,6 +218,20 @@
             </div>
             <div class="card-image-wrapper">
               <img src="https://via.placeholder.com/320x200?text=Subsidies" alt="Subsidies">
+            </div>
+          </article>
+
+          <!-- Nieuws Subsidies (Google Docs) -->
+          <article class="card">
+            <div class="card-text">
+              <h3>Nieuws Subsidies</h3>
+              <p class="card-meta">Automatisch bijgewerkt vanuit Google Docs</p>
+              <iframe
+                class="doc-frame"
+                src="https://docs.google.com/document/d/104x_88tuOcRBAt0DmN2t7N52TFcKdgrwk-7e3T6TMyA/preview"
+                loading="lazy"
+                allowfullscreen
+              ></iframe>
             </div>
           </article>
         </div>
@@ -246,4 +315,3 @@
   </div>
 </body>
 </html>
-
