--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <form id="login-form">
         <label for="username">Gebruikersnaam</label>
-        <input type="text" id="username" autocomplete="username" placeholder="FCBREO">
+        <input type="text" id="username" autocomplete="username">
 
         <label for="password">Wachtwoord</label>
         <input type="password" id="password" autocomplete="current-password" placeholder="wachtwoord">
