--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
               <h3>Start nieuwsbrief FCBREO</h3>
               <p class="card-meta">Datum: 1 januari 2026</p>
               <p>
-                Via dit ledenportaal delen we voortaan nieuws, verslagen en uitnodigingen met alle
-                partners binnen FCBREO.
+                Via dit ledenportaal delen we voortaan nieuws met alle
+                leden van FCBREO. Houd het portaal in de gaten, want we zullen regelmatig updates geven van de ontwikkelingen
               </p>
             </div>
             <div class="card-image-wrapper">
