--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <!-- Blok 1 -->
           <article class="card">
             <div class="card-text">
-              <h3>Start nieuwsbrief FCBREO</h3>
+              <h3>Start ledenportaal FCBREO</h3>
               <p class="card-meta">Datum: 1 januari 2026</p>
               <p>
                 Via dit ledenportaal delen we voortaan nieuws met alle
