--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <p>Nieuws over initiatieven, pilots en samenwerkingen.</p>
             </div>
             <div class="card-image-wrapper">
-              <img src="https://via.placeholder.com/320x200?text=Kansrijk+opgroeien">
+              <img src="Kansrijkopgroeien.jpg">
             </div>
           </article>
 
