--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
               <p>Nieuws over initiatieven, pilots en samenwerkingen.</p>
             </div>
             <div class="card-image-wrapper">
-              <img src="Kansrijkopgroeien.jpg">
+              <img src="https://raw.githubusercontent.com/FCBREO/Nieuws/8448002fdd20a9e6e423eb10446f390e5751dbf4/Kansrijkopgroeien.jpg
+">
             </div>
           </article>
 
