--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </p>
             </div>
             <div class="card-image-wrapper">
-              <img src="https://via.placeholder.com/320x200?text=Nieuws" alt="">
+              <img src="https://raw.githubusercontent.com/FCBREO/Nieuws/68e104ca4a733784819e0a644db1d01068866478/Ledenportaalfoto.png" alt="Nieuws / ledenportaal">
             </div>
           </article>
 
